--- a/pom.xml
+++ b/pom.xml
@@ -2,20 +2,47 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>3.0.5</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
+	
 	<groupId>com.cloudacademy.banking</groupId>
 	<artifactId>customer</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>customer</name>
+	<packaging>jar</packaging>
+	
+	<name>${project.artifactId}</name>
 	<description>Demo project for Spring Boot</description>
+	<organization>
+		<name>CloudAcademy</name>
+		<url>https://cloudacademy.com</url>
+	</organization>
+
+	<developers>
+		<developer>
+			<name>Jeremy Cook</name>
+			<email>jeremy.cook@cloudacademy.com</email>
+			<url>https://www.linkedin.com/in/jeremycook123/</url>
+			<organization>CloudAcademy</organization>
+			<organizationUrl>https://cloudacademy.com</organizationUrl>
+			<roles>
+				<role>Lead Content Architect</role>
+				<role>DevOps - Researcher and Trainer</role>
+				<role>Success Services</role>
+			</roles>
+		</developer>
+	</developers>
+	
 	<properties>
-		<java.version>17</java.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.source>17</maven.compiler.source>
+		<maven.compiler.target>17</maven.compiler.target>
 	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
