--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -39,7 +39,7 @@ jobs:
         password: ${{ secrets.NEXUS_PASSWORD }}
         format: maven2
         repository: java-devsecops
-        coordinates: groupId=com.cloudacademy.banking artifactId=customer version=0.0.1-SNAPSHOT
+        coordinates: groupId=com.cloudacademy.banking artifactId=customer version=SNAPSHOT
         assets: extension=jar
         filename: ./target/customer-0.0.1-SNAPSHOT.jar
 
