--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -38,8 +38,8 @@ jobs:
         username: admin
         password: ${{ secrets.NEXUS_PASSWORD }}
         format: maven2
-        repository: java-devsecops
-        coordinates: groupId=com.cloudacademy.banking artifactId=customer version=SNAPSHOT
+        repository: maven-snapshots
+        coordinates: groupId=com.cloudacademy.banking artifactId=customer version=0.0.1-SNAPSHOT
         assets: extension=jar
         filename: ./target/customer-0.0.1-SNAPSHOT.jar
 
