--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -34,14 +34,14 @@ jobs:
     - name: Nexus Repo Publish
       uses: sonatype-nexus-community/nexus-repo-github-action@master
       with:
-        serverUrl: ${{ secrets.NEXUS_SERVER_URL }}/repository/java-devsecops/
+        serverUrl: ${{ secrets.NEXUS_SERVER_URL }}
         username: admin
         password: ${{ secrets.NEXUS_PASSWORD }}
         format: maven2
-        repository: java-devsecops
-        coordinates: groupId=com.cloudacademy.banking artifactId=customer version=0.0.1-SNAPSHOT
+        repository: maven-releases
+        coordinates: groupId=com.cloudacademy.banking artifactId=customer version=1.0.0
         assets: extension=jar
-        filename: ./target/customer-0.0.1-SNAPSHOT.jar
+        filename: ./target/customer-1.0.0.jar
 
     - name: Generate SBOM
       run: |
