--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,8 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.11</version>
-		<relativePath /> <!-- lookup parent from repository -->
+		<version>3.0.6</version>
+		<relativePath />
 	</parent>
 
 	<groupId>com.cloudacademy.banking</groupId>
@@ -40,20 +40,20 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.source>11</maven.compiler.source>
-		<maven.compiler.target>11</maven.compiler.target>
+		<maven.compiler.source>17</maven.compiler.source>
+		<maven.compiler.target>17</maven.compiler.target>
 	</properties>
 
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
-			<version>2.7.11</version>
+			<version>3.0.6</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
-			<version>2.7.11</version>
+			<version>3.0.6</version>
 		</dependency>
 
 		<dependency>
@@ -68,16 +68,11 @@
 			<version>1.18.26</version>
 			<optional>true</optional>
 		</dependency>
-		<dependency>
-			<groupId>jakarta.persistence</groupId>
-			<artifactId>jakarta.persistence-api</artifactId>
-			<version>3.1.0</version>
-		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
-			<version>2.7.11</version>
+			<version>3.0.6</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
