--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -103,7 +103,7 @@ jobs:
         project: 'test'
         path: '.'
         format: 'HTML'
-        out: 'reports' # this is the default, no need to specify unless you wish to override it
+        out: 'reports'
         args: >
           --failOnCVSS 7
           --enableRetired
