--- a/pom.xml
+++ b/pom.xml
@@ -106,8 +106,7 @@
 				<artifactId>dependency-track-maven-plugin</artifactId>
 				<version>1.4.1</version>
 				<configuration>
-				<dependencyTrackBaseUrl>http://localhost:8081</dependencyTrackBaseUrl>
-				<apiKey>1dkJKhWqZRxIP3PsVLC7Rnf4psNyYIBM</apiKey>
+				<dependencyTrackBaseUrl>http://dependency-track:8080</dependencyTrackBaseUrl>
 				</configuration>
 				<dependencies>
 				<dependency>
