--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,7 @@
 				<version>1.4.1</version>
 				<configuration>
 				<dependencyTrackBaseUrl>http://dependency-track:8080</dependencyTrackBaseUrl>
+				<apiKey></apiKey>
 				</configuration>
 				<dependencies>
 				<dependency>
