--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,66 @@
 			<plugin>
 				<groupId>org.cyclonedx</groupId>
 				<artifactId>cyclonedx-maven-plugin</artifactId>
+				<version>2.7.9</version>
+				<configuration>
+					<schemaVersion>1.4</schemaVersion>
+					<includeBomSerialNumber>true</includeBomSerialNumber>
+					<includeCompileScope>true</includeCompileScope>
+					<includeProvidedScope>true</includeProvidedScope>
+					<includeRuntimeScope>true</includeRuntimeScope>
+					<includeSystemScope>true</includeSystemScope>
+					<includeTestScope>false</includeTestScope>
+				</configuration>
+				<executions>
+					<execution>
+						<id>generate-bom</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>makeAggregateBom</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>io.github.pmckeown</groupId>
+				<artifactId>dependency-track-maven-plugin</artifactId>
+				<version>1.7.0</version>
+				<configuration>
+					<dependencyTrackBaseUrl>http://dependency-track:8080</dependencyTrackBaseUrl>
+					<apiKey></apiKey>
+					<failOnError>true</failOnError>
+				</configuration>
+				<executions>
+					<execution>
+						<id>upload-bom</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>upload-bom</goal>
+						</goals>
+						<configuration>
+							<updateProjectInfo>true</updateProjectInfo>
+						</configuration>
+					</execution>
+					<execution>
+						<id>fail-if-vulnerabilities-present</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>findings</goal>
+						</goals>
+						<configuration>
+							<findingThresholds>
+								<critical>0</critical>
+								<high>0</high>
+								<medium>0</medium>
+								<low>0</low>
+							</findingThresholds>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<!-- <plugin>
+				<groupId>org.cyclonedx</groupId>
+				<artifactId>cyclonedx-maven-plugin</artifactId>
 				<executions>
 				<execution>
 					<phase>package</phase>
@@ -104,19 +164,19 @@
 			<plugin>
 				<groupId>io.github.pmckeown</groupId>
 				<artifactId>dependency-track-maven-plugin</artifactId>
-				<version>1.4.1</version>
+				<version>1.7.0</version>
 				<configuration>
 					<dependencyTrackBaseUrl>http://dependency-track:8080</dependencyTrackBaseUrl>
 					<apiKey></apiKey>
 				</configuration>
 				<dependencies>
-				<dependency>
-					<groupId>io.github.pmckeown</groupId>
-					<artifactId>dependency-track-maven-plugin</artifactId>
-					<version>1.7.0</version>
-				</dependency>
+					<dependency>
+						<groupId>io.github.pmckeown</groupId>
+						<artifactId>dependency-track-maven-plugin</artifactId>
+						<version>1.7.0</version>
+					</dependency>
 				</dependencies>
-			</plugin>
+			</plugin> -->
 		</plugins>
 	</build>
 
