--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,11 @@
 			<version>3.0.6</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-crypto</artifactId>
+			<version>5.4.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
