--- a/pom.xml
+++ b/pom.xml
@@ -74,11 +74,7 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework.security</groupId>
-			<artifactId>spring-security-crypto</artifactId>
-			<version>5.4.2</version>
-		</dependency>
-		<dependency>
+			<!-- Insecure: CVE-2021-44228 -->
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-core</artifactId>
 			<version>2.13.0</version>
