--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,4 +4,4 @@ repos:
     hooks:
     - id: talisman-commit
       name: talisman
-      entry: talisman --githook pre-commit
+      entry: talisman --githook pre-commit -p **/*.java
