updated gh workflow config

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -1,4 +1,4 @@
-name: CodeQL
+name: codeql
 
 on:
   push:
@@ -46,7 +46,7 @@ jobs:
       uses: actions/setup-java@v3
       with:
         distribution: temurin
-        java-version: 17
+        java-version: 21
 
     - name: Cache Maven packages
       uses: actions/cache@v1
