--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,9 +1,9 @@
-name: Build
+name: buildanalyze
 
 on:
   push:
-    branches:
-      - main
+    tags:
+      - '1.*.*'
   pull_request:
     types: [opened, synchronize, reopened]
   workflow_dispatch:
@@ -24,8 +24,8 @@ jobs:
 
     - name: Checkout Repository
       uses: actions/checkout@v3
-#     with:
-#       fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      with:
+        fetch-depth: 0
 
     - name: Setup Java
       uses: actions/setup-java@v3
