--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,3 +6,10 @@ repos:
         entry: ./run-checkstyle.sh
         language: script
         files: \.java$
+
+  - repo: https://github.com/thoughtworks/talisman
+    rev: "v1.31.0"
+    hooks:
+    - id: talisman-commit
+      name: talisman
+      entry: talisman --githook pre-commit -p **/*.java
